feat: implement comprehensive mobile responsive design
- Add hamburger menu with slide-in sidebar navigation
- Make all components mobile-first responsive (sm, md, lg breakpoints)
- Implement touch-friendly button sizes and tap targets
- Add mobile viewport meta tags with pinch-zoom support
- Responsive modals, filter bars, and gallery layouts
- Update documentation and serendipity engine
- Site now fully functional from 320px to 1920px+ screens

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
+    <meta name="description" content="Explorez 310 œuvres culturelles qui interrogent notre relation au temps" />
+    <meta name="theme-color" content="#6366f1" />
     <title>Playtime — Les trois visages du temps</title>
   </head>
   <body class="antialiased bg-white text-slate-900">
